<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/tlo_panel">



    <Button
        android:id="@+id/ciśnienie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="@dimen/_2sdp"
        android:layout_marginVertical="@dimen/_2sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:background="@drawable/przycisk"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/czujnik_ci_nienia"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/guideline13" />

    <Button
        android:id="@+id/predkosc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="@dimen/_13ssp"
        android:gravity="center_horizontal|center_vertical"
        android:layout_marginHorizontal="@dimen/_2sdp"
        android:layout_marginVertical="@dimen/_2sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/ciśnienie"
        android:textColor="@android:color/black"
        android:background="@drawable/przycisk"
        android:text="@string/pr_dkosc"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline13" />

    <Button
        android:id="@+id/sekcje"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="@dimen/_13ssp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@android:color/black"
        android:layout_marginHorizontal="@dimen/_2sdp"
        android:layout_marginVertical="@dimen/_2sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/predkosc"
        android:background="@drawable/przycisk"
        android:text="@string/sekcje"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/guideline13" />

    <Button
        android:id="@+id/rozstawa"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="@dimen/_13ssp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@android:color/black"
        android:layout_marginHorizontal="@dimen/_2sdp"
        android:layout_marginVertical="@dimen/_2sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/sekcje"
        android:background="@drawable/przycisk"
        android:text="ROZSTAWA"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/guideline13" />

    <Button
        android:id="@+id/wydatek_cieczy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="@dimen/_13ssp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@android:color/black"
        android:layout_marginHorizontal="@dimen/_2sdp"
        android:layout_marginVertical="@dimen/_2sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:layout_below="@+id/ciśnienie"
        android:layout_alignParentStart="true"
        android:background="@drawable/przycisk"
        android:text="WYDATEK CIECZY"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <Button
        android:id="@+id/ciśnienie_mieszania"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="@dimen/_13ssp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@android:color/black"
        android:layout_marginHorizontal="@dimen/_2sdp"
        android:layout_marginVertical="@dimen/_2sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:layout_below="@+id/predkosc"
        android:layout_toEndOf="@+id/zaawansowane"
        android:background="@drawable/przycisk"
        android:text="CIŚNIENIE MIESZANIA"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <Button
        android:id="@+id/zaawansowane"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="@dimen/_13ssp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@android:color/black"
        android:layout_marginHorizontal="@dimen/_2sdp"
        android:layout_marginVertical="@dimen/_2sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:layout_below="@+id/sekcje"
        android:layout_toEndOf="@+id/system"
        android:background="@drawable/przycisk"
        android:text="@string/zaawansowane"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <Button
        android:id="@+id/system"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="@dimen/_17ssp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@android:color/black"
        android:layout_marginHorizontal="@dimen/_2sdp"
        android:layout_marginVertical="@dimen/_2sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:layout_below="@+id/rozstawa"
        android:layout_toEndOf="@+id/zaawansowane"
        android:background="@drawable/przycisk"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <Button
        android:id="@+id/powrot"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_50sdp"
        android:textSize="@dimen/_15ssp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@android:color/black"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/_48sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/powrot"
        android:text="@string/powr_t"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />



</androidx.constraintlayout.widget.ConstraintLayout>